[gd_scene load_steps=6 format=3 uid="uid://cvin3beraqody"]

[ext_resource type="Script" uid="uid://cnqukvria25a7" path="res://scenes/settings.gd" id="1_f4mfi"]
[ext_resource type="Texture2D" uid="uid://b8l67msa4vfmd" path="res://textures/Menu_Background_logo_left.png" id="1_r6d6q"]
[ext_resource type="Script" uid="uid://vkk4wyvc40r4" path="res://scenes/music.gd" id="2_6wm04"]
[ext_resource type="Texture2D" uid="uid://cp7eihsplpbje" path="res://textures/Butttons-Menu/2.png" id="4_es4n0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4mfi"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_f4mfi")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 650.0
scale = Vector2(0.42, 0.42)
texture = ExtResource("1_r6d6q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 765.0
offset_top = 202.0
offset_right = 1015.0
offset_bottom = 452.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "Music"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("2_6wm04")
bus_name = "Music"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "Sound Effects"
horizontal_alignment = 1

[node name="SFX" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("2_6wm04")
bus_name = "SFX"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "UI Sounds"
horizontal_alignment = 1

[node name="UI" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("2_6wm04")
bus_name = "UI"

[node name="Home" type="Button" parent="."]
offset_left = 713.0
offset_top = 490.0
offset_right = 1217.0
offset_bottom = 659.0
scale = Vector2(0.7, 0.7)
theme_override_styles/hover = SubResource("StyleBoxFlat_f4mfi")
icon = ExtResource("4_es4n0")

[connection signal="mouse_entered" from="VBoxContainer/Music" to="." method="_on_music_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/SFX" to="." method="_on_sfx_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/UI" to="." method="_on_ui_mouse_entered"]
[connection signal="button_down" from="Home" to="." method="_on_home_button_down"]
